new functions added
